[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/Screen.tres" type="Theme" id=1]
[ext_resource path="res://assets/screen/grey_panel.png" type="Texture" id=2]
[ext_resource path="res://src/screen/windows/Messages.gd" type="Script" id=3]

[node name="Messages" type="HBoxContainer"]
margin_left = 1.0
margin_top = 32.0
margin_right = 528.0
margin_bottom = 300.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Headings" type="ItemList" parent="."]
margin_right = 200.0
margin_bottom = 268.0
rect_min_size = Vector2( 200, 260 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 204.0
margin_right = 524.0
margin_bottom = 268.0
custom_constants/separation = 2

[node name="Control" type="Control" parent="Content"]
margin_right = 320.0

[node name="From" type="NinePatchRect" parent="Content"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
margin_top = 2.0
margin_right = 320.0
margin_bottom = 52.0
rect_min_size = Vector2( 320, 50 )
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="FromLabels" type="VBoxContainer" parent="Content/From"]
margin_left = 5.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 47.0

[node name="FromLabel" type="Label" parent="Content/From/FromLabels"]
margin_right = 210.0
margin_bottom = 19.0
text = "FROM"

[node name="From" type="Label" parent="Content/From/FromLabels"]
margin_top = 23.0
margin_right = 210.0
margin_bottom = 42.0
text = "The Office of the CEO"

[node name="Title" type="NinePatchRect" parent="Content"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
margin_top = 54.0
margin_right = 320.0
margin_bottom = 104.0
rect_min_size = Vector2( 320, 50 )
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TitleLabels" type="VBoxContainer" parent="Content/Title"]
margin_left = 5.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 47.0

[node name="TitleLabel" type="Label" parent="Content/Title/TitleLabels"]
margin_right = 250.0
margin_bottom = 19.0
text = "SUBJECT"

[node name="Title" type="Label" parent="Content/Title/TitleLabels"]
margin_top = 23.0
margin_right = 250.0
margin_bottom = 42.0
text = "REMINDER TO ALL EMPLOYEES"

[node name="Content" type="NinePatchRect" parent="Content"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
margin_top = 106.0
margin_right = 320.0
margin_bottom = 266.0
rect_min_size = Vector2( 320, 160 )
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Content" type="RichTextLabel" parent="Content/Content"]
margin_left = 5.0
margin_top = 8.0
margin_right = 315.0
margin_bottom = 152.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec leo et neque congue dignissim. Nunc tristique metus in justo hendrerit, ut commodo nulla vulputate. Sed eu lobortis justo. Nunc interdum et massa nec sollicitudin. Integer rutrum metus et augue fermentum, quis blandit orci bibendum. In urna mauris, venenatis nec euismod nec, fermentum eget arcu. Vestibulum efficitur enim sit amet turpis tristique, ut commodo ipsum ultricies.

Integer faucibus feugiat orci ut porta. Integer egestas vel lacus eu bibendum. Aenean laoreet porttitor mi, in elementum ex sodales vel. Mauris volutpat, enim in lobortis commodo, turpis sem eleifend purus, ac rhoncus dui odio et risus. Suspendisse at ipsum nec velit varius molestie quis a quam. Curabitur faucibus ultricies turpis, sed dignissim dolor bibendum eu. Etiam nec dolor lobortis eros feugiat ornare sed eu ex. Maecenas ligula odio, aliquam eget porttitor a, consectetur sed erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;

Aenean nibh turpis, ultrices id fringilla vitae, laoreet a elit. Nulla in eros vel ante maximus commodo ut ut ex. Nullam semper sit amet nisi eu feugiat. Aenean magna est, eleifend eget pulvinar quis, consectetur non nulla. Praesent id pellentesque nisl. Cras a volutpat orci, ornare laoreet diam. Proin rutrum velit ac est mattis elementum. Sed non hendrerit diam. Aenean vel vulputate purus. Vivamus ornare eros sed venenatis volutpat. Donec et nisl quis dolor posuere ullamcorper. Aliquam erat volutpat."

[connection signal="item_selected" from="Headings" to="." method="_on_Headings_item_selected"]
